2006-07-14  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/filetypes.c, src/highlighting.c, tagmanager/tm_tag.c,
   tagmanager/tm_workspace.c: Fixed autocompletion for filetype C++.
 * src/utils.c: Removed unneeded functions:
   utils_glist_strings_free() and utils_glist_from_string().
 * src/encodings.c: Fixed wrong charset detection on UTF-8
                    (and maybe other) systems.


2006-07-13  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/build.c, src/interface.c, src/utils.c, src/utils.h, src/geany.h,
   src/msgwindow.c, src/msgwindow.h, src/callbacks.c, src/callbacks.h,
   src/keyfile.c, src/search.c, src/search.h, src/prefs.c,
   src/dialogs.c, src/main.c, src/dialogs.h, src/Makefile.am,
   geany.glade: Added basic Find in files search functionality.


2006-07-11  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/dialogs.c: Moved dialogs_show_prefs_dialog() to src/prefs.c.
 * geany.glade, src/interface.c, src/vte.c, src/prefs.c, src/dialogs.c,
   src/geany.h, src/main.c, src/callbacks.c, src/keybindings.c,
   src/keyfile.c, src/utils.c:
   Improved toolbar popup menu.
   Added new preferences tab for toolbar settings, several toolbar
   buttons can be hidden.
   Added Undo and Redo toolbar buttons (closes request #1519261).
 * src/sci_cb.c, src/keybindings.c:
   Added return value and tag name to the calltip.


2006-07-11  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/main.c: Prefix command-line opened files with the current
               directory so relative paths will work better.


2006-07-10  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/sci_cb.c: Autocompletion only works on blank lines.
 * src/callbacks.c, src/dialogs.c:
   Added "Replace in all open files" option in the replace dialog.


2006-07-09  Enrico Tröger  <enrico.troeger@uvena.de>

 * tagmanager/d.c, tagmanager/Makefile.am, tagmanager/parsers.h,
   src/filetypes.c, src/highlighting.c, src/utils.c, src/build.c,
   src/templates.c, data/filetypes.d: